css/index.css
body {
  font-family: "Lucida Console", sans-serif;
  background-color: white;
  margin-bottom: 0px; 
}

body.dark-mode {
	background-color: #333;
	color: white;
}

h1 {
  font-family: "Lucida Console", sans-serif;
  color: black;
  text-align: center;
  font-size: 40px; 
}
body.dark-mode h1{
	color:white;
}
hr { 
  display: block;
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  margin-left: auto;
  margin-right: auto;
  border-style: inset;
  border-width: 1px;
}
p {
  font-family: "Lucida Console", sans-serif;
  font-size: 20px;
  margin-left: 30px;
  margin-right: 30px; 
}
.este{ 
  font-family:"Lucida Console", sans-serif; 
  font-size: 20px; 
  margin-left:30px; 
 }
ul {
  list-style-type: none;
  margin: 0;
  padding: 10px;
  overflow: hidden;
  background-color: #333;
  display: flex; 
  justify-content:  center; 
}

li {
  float: left;
}

li a {
  display: block;
  color: white;
  font-size:20px;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

/* Change the link color to #111 (black) on hover */
li a:hover {
  background-color: #4CAF50;
}
.active {
  background-color: #4CAF50;
}

h1 {
  font-size: 30px;
  color: #000;
  border-bottom: 1px solid #ccc;
  padding-bottom: 10px;
}
h3 {
  font-family: "Lucida Console", sans-serif;
  color: black;
  text-align: center;
  font-size: 30px; 
  border-bottom: 1px solid #ccc;
  padding-bottom: 5px; 
}
body.dark-mode h3 {
  color: white;
}
a:visited {
  color: white; 
  background-color: #333;
  padding: 14px 25px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
}

a:link { 
  color: white; 
  background-color: #333; 
  text-align: center; 
  text-decoration: none; 
  display: inline-block; 
}

a:hover, a:active {
  background-color: #4CAF50;
}

footer {
  position: fixed;
  width: 100%; 
  text-align: center;
  padding: 0px;
  background-color: #333;
  color: white; 
  bottom: 0.5px; 
  height: 80px;
  left:0px; 
  right:0px;
}

/* Create three equal columns that floats next to each other */
.column {
  float: left;
  width: 33.33%;
  padding: 15px;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
@media screen and (max-width:600px) {
  .column {
    width: 100%;
  }
}

img { 
  max-width: 100%; 
  height: auto; 
}

.fa-moon-o {
	display: inline-block;
	color: white;
	font-size: 35px; 
	text-align: center;
	padding: 14px 16px; 
	text-decoration: none;
}

.fa-moon-o:visited{
  display: block;
  font-size: 60px;
  color: white; 
  background-color: #333;
  padding: 20px;
  text-align: center;
  text-decoration: none;
}
.fa-moon-o:link { 
  color: white; 
  background-color: #333; 
  text-align: center; 
  text-decoration: none; 
  display: inline-block; 
}

.fa-moon-o:hover{
  background-color: #4CAF50;
  color:white;
}

